# AI-stomatology

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.camera.yml  docker-compose.demo.yml  docker-compose.fish-cpu.yml  docker-compose.fish.yml  docker-compose.gpu.yml  docker-compose.qwen.yml  docker-compose.smart.yml  docker-compose.webcam.yml  docker-compose.xtts-cpu.yml  docker-compose.xtts.yml  docker-compose.yml  package.json  pyproject.toml  requirements-minimal.txt  requirements-stt.txt  requirements-voice.txt  requirements.txt
.github/workflows/: ci.yml
assets/videos/: README.md
assets/voice/: README.md  reference.txt
config/: go2rtc.example.yaml  go2rtc.yaml  prompts.yaml  settings.mac.yaml  settings.yaml
data/logs/: conversations.jsonl
docs/: API.md  ARCHITECTURE.md  DEPLOY_SERVER.md  MACBOOK_TEST.md  SETUP.md  STRUCTURE.md  WEB_DEMO.md
kiosk/: README.md  app.js  audio.js  config.json  index.html  jellyfish.js  styles.css  visuals.js
kiosk/scene/: OceanScene.js  background.js  camera.js  config.js  core.js  events.js  glsl.js  jellyfish.js  lightrays.js  particles.js
scripts/: Modelfile  Modelfile.mac  install.sh  run.sh  screenshot_ui.js  setup_env.sh  setup_macbook.sh  setup_ollama_dental.sh  test_components.py  test_tts.py  test_ui.py
server/: .env.example  README.md  requirements.txt  run.sh
server/app/: config.py  conversation_log.py  dikidi_readonly.py  main.py  orchestrator.py  persona.py
server/app/face/: recognizer.py
server/app/memory/: __init__.py  schema.sql  store.py
server/app/providers/: __init__.py  base.py  llm_grok.py  mock.py  stt_elevenlabs.py  tts_elevenlabs.py
src/: __init__.py  main.py  main_demo.py  main_offline.py
src/camera/: __init__.py  detector.py  detector_mock.py
src/core/: app.py  app_demo.py  config.py  conversation_logger.py
src/dental/: __init__.py  faq.py  humor.py  intents.py  knowledge_base.py  triage.py
src/dikidi/: __init__.py  client.py  client_mock.py  client_stub.py  fake_server.py  sim_client.py
src/llm/: __init__.py  assistant.py  assistant_mock.py  tools.py
src/ui/: __init__.py  display.py  display_mock.py
src/voice/: __init__.py  dental_lexicon.py  russian_normalizer.py  stt.py  stt_mock.py  tts.py  tts_mock.py
src/web/: accent.py  responder.py  server.py  stt.py  text_norm.py  tts.py
tests/: test_config.py  test_dental.py
web/: app.js  camera.js  index.html  styles.css  voice.js
