# ════════════════════════════════════════════════════════════════════
#  Smile.AI — голосовой администратор стоматологии (веб-киоск)
#
#  Установка (для разработки):
#     python -m venv .venv && source .venv/bin/activate
#     pip install -e ".[dev]"          # + ruff/pytest
#     pip install -e ".[stt]"          # + серверное распознавание речи
#
#  Запуск (см. README / docs/WEB_DEMO.md):
#     python -m src.dikidi.fake_server --host 0.0.0.0 --port 8089
#     DIKIDI_BASE_URL=http://127.0.0.1:8089 python -m src.web.server --port 8080
#  Или через Docker:  make demo  /  make smart
# ════════════════════════════════════════════════════════════════════
[project]
name = "smile-ai"
version = "1.0.0"
description = "Голосовой ассистент-администратор стоматологической клиники (веб-киоск)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Smile Clinic" }]

dependencies = [
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "requests>=2.31",
]

[project.optional-dependencies]
# Серверное распознавание речи (для Firefox). Модель качается в рантайме.
stt = ["faster-whisper>=1.0.3"]
dev = ["ruff>=0.4", "pytest>=8.0"]

[project.scripts]
smile-web   = "src.web.server:main"
smile-dikidi = "src.dikidi.fake_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── ruff ───────────────────────────────────────
[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

# ── pytest ─────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
